# Add all ML submodules
add_subdirectory(bayesian_network)
add_subdirectory(computer_vision)
add_subdirectory(decision_tree)
add_subdirectory(deep_learning)
add_subdirectory(dimensionality_reduction)
add_subdirectory(distribution)
add_subdirectory(generalized_linear_model)
add_subdirectory(hidden_markov_model)
add_subdirectory(latent_sentiment_analysis)
add_subdirectory(marked_point_process)
add_subdirectory(multi_arm_bandit)
add_subdirectory(nlp)
add_subdirectory(support_vector_machine)
add_subdirectory(time_series)
add_subdirectory(tracker)
